--- a/src/index.html
+++ b/src/index.html
@@ -82,27 +82,31 @@
                 <h2>Décorations</h2>
                 <div class="cols_2">
                     <div>
-                        <label for="meme_fontSize">font-size</label><br>
+                        <label for="meme_fontSize">font-size</label>
                         <input type="number" min="0" name="fontSize" id="meme_fontSize">
                     </div>
                     <div>
-                        <label for="meme_fontWeight">font-weight</label><br>
+                        <label for="meme_fontWeight">font-weight</label>
                         <input type="number" name="fontWeight" id="meme_fontWeight" min="100" max="900" step="100">
                     </div>
                 </div>
                 <div class="cols_2">
                     <div>
-                        <label for="meme_underline">underline</label><br>
+                        <label for="meme_underline">underline</label>
                         <input type="checkbox" name="underline" id="meme_underline">
                     </div>
                     <div>
-                        <label for="meme_italic">italic</label><br>
-                        <input type="radio" name="italic" value="true">oui / non<input type="radio" name="italic"
-                            value="false" checked>
+                        <label for="meme_color">color</label>
+                        <input type="color" name="color" id="meme_color">
                     </div>
+                    <div>
+                        <label>italic</label>
+                        <label><input type="radio" name="italic" value="true">oui</label>
+                        <label><input
+                                type="radio" name="italic" value="false" checked>non</label>
+                    </div>
+                    
                 </div>
-                <label for="meme_color">color</label><br>
-                <input type="color" name="color" id="meme_color">
                 <hr>
                 <div class="cols_2">
                     <button type="reset" class="btn btn-warning">Reinit</button>
@@ -112,7 +116,7 @@
         </div>
     </div>
     <div id="footer">copyright &copy; 2024</div>
-   
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
